<resources>
    <string name="app_name">GCase</string>
    <string name="check_internet_connection">Please check your internet connection</string>
    <string name="login">Giriş Yap</string>
    <string name="login_title">Github ile giriş yap</string>
    <string name="logout">Çıkış Yap</string>
    <string name="logout_message">Hesabınızdan çıkış yapmak istediğinize emin misiniz?</string>
    <string name="yes">Evet</string>
    <string name="cancel">İptal</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_failed">Oturum açma işlemi başarısız!</string>
    <string name="home">Home</string>
    <string name="my_work">My Work</string>
    <string name="repositories">Repositories</string>
    <string name="profile">Profile</string>
    <string name="explorer">Explorer</string>
    <string name="notification">Notification</string>
    <string name="search_github">Search Github</string>
    <string name="recent_searchR">Resent Search</string>
    <string name="recent_search">Recent Search</string>
    <string name="clear">CLEAR</string>
    <string name="find_your_stuff">Find your stuff</string>
    <string name="empty_list_text">Search all og Github for People, Repositories, Organizations, Issues and Pull Requests.</string>
    <string name="stars">stars</string>
    <string name="forks">forks</string>
    <string name="star">STAR</string>
    <string name="default_brach">DEFAULT BRANCH</string>
    <string name="open_issues">Open Issues</string>
    <string name="watchers">Watchers</string>
    <string name="license">License</string>
    <string name="nothing_to_see_here">Nothing to see here</string>
    <string name="sort">Sort</string>
    <string name="order">Order</string>
    <string name="apply">Apply</string>
    <string name="search">Search</string>
    <string name="search_options">Search Options</string>
    <string name="search_repositories">Search Repositories</string>
    <string name="search_person">Search Person</string>
    <string name="person">Person</string>
    <string name="followers">followers</string>
    <string name="following">following</string>
    <string name="follow">FOLLOW</string>
    <string name="search_organization">Search Organization</string>
    <string name="organization">Organization</string>
    <string name="date_range">Date Range</string>
    <string name="starred_repository">Starred Repositories</string>
</resources>